# enso

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .pnpmfile.cjs  .prettierignore  .prettierrc.yaml  BUILD.bazel  CHANGELOG.md  Cargo.toml  MODULE.bazel  README.md  build-config.yaml  build.sbt  eslint.config.mjs  flake.nix  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run  run.cmd  run.ps1  tsconfig.json
app/common/: BUILD.bazel  CLAUDE.md  package.json  tsconfig.json  vite.config.ts
app/common/src/: accessToken.ts  ai.ts  backendQuery.ts  config.ts  constants.ts  load.ts  options.ts  queryClient.ts  text.ts
app/common/src/services/: Backend.ts  HttpClient.ts  LocalBackend.ts  RemoteBackend.ts
app/common/src/text/: english.json
app/common/src/utilities/: ConditionVariable.ts  async.ts  bytes.ts  childProcess.ts  errors.ts  file.ts  permissions.ts  uniqueString.ts
app/electron-client/: BUILD.bazel  CLAUDE.md  electron-builder-config.cjs  electron-builder-config.ts  esbuildConfig.ts  export-config.mjs  package.json  paths.ts  playwright.config.ts  tsconfig.json  vitest.config.ts  watch.ts
app/electron-client/macos/: README.md  build-dmg.mjs  electron-builder-dmg-only.cjs  notarize-app.mjs  sign-app.mjs  sign-archives.mjs  stage-bazel-app.sh
app/electron-client/macos/lib/: cli.mjs  env.mjs  exec.mjs  fs.mjs  glob.mjs  keychain.mjs  logger.mjs  sanitize.mjs  signal.mjs  signing.mjs
app/electron-client/src/: aiMcpServer.ts  authentication.ts  backend.ts  claudeAgent.ts  configParser.ts  electron.ts  fileAssociations.ts  globals.d.ts  guiConfig.ts  index.ts  ipc.ts  log.ts  menuItems.ts  paths.ts  preload.ts  projectManager.ts  projectService.ts  server.ts  urlAssociations.ts
app/electron-client/src/ai/: aiMcpServer.ts  claudeAgent.ts  claudeAgentChild.ts  prompts.ts
app/electron-client/tasks/: signArchivesMacOs.ts
app/electron-client/tests/: README.md  aiChallengePrep.spec.ts  aiChallenges.spec.ts  aiMetrics.ts  aiNode.spec.ts  electronTest.ts  gettingStarted.spec.ts  localWorkflow.spec.ts
app/electron-client/tests/headless/: aiMcpServer.test.ts  aiMetrics.test.ts  claudeAgent.test.ts  claudeAgentChild.test.ts  claudeAgentTestHarness.ts  extractJsonObject.test.ts  writeFile.test.ts
app/gui/: .env  .env.bazel  .env.production  .env.testing  .gitignore  BUILD.bazel  CLAUDE.md  env.d.ts  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.app.vitest.json  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  vite.config.ts  vite.test.config.ts  vitest.config.ts
app/gui/.storybook/: preview.tsx
app/gui/integration-test/: CLAUDE.md  base.ts  pm-openrpc.json
app/gui/integration-test/actions/: BaseActions.ts  DrivePageActions.ts  EditorPageActions.ts  PageActions.ts  contextMenuActions.ts  goToPageActions.ts  index.ts
app/gui/integration-test/dashboard/: assetPanel.spec.ts  assetSearchBar.spec.ts  assetsTableFeatures.spec.ts  auth.setup.ts  authPreserveEmail.spec.ts  contextMenu.spec.ts  copy.spec.ts  createAsset.spec.ts  dataLinkEditor.spec.ts  degradedAuth.spec.ts  delete.spec.ts  driveView.spec.ts  editAssetName.spec.ts  exportAsset.spec.ts  loginLogout.spec.ts  loginScreen.spec.ts  organizationSettings.spec.ts  pageSwitcher.spec.ts  rightPanel.spec.ts  signUp.spec.ts  sort.spec.ts  userMenu.spec.ts  userSettings.spec.ts  welcomeProject.spec.ts
app/gui/integration-test/mock/: cloudApi.ts  dataServer.ts  localApi.ts  lsHandler.ts  registerMocks.ts
app/gui/integration-test/project-view/: actions.ts  aiEditNode.spec.ts  aiNodes.spec.ts  aiPlaceholder.spec.ts  aligningNodes.spec.ts  collapsingAndEntering.spec.ts  componentBrowser.spec.ts  customExpect.ts  edgeInteractions.spec.ts  edgeRendering.spec.ts  editorPanels.spec.ts  expandingAndCollapsing.spec.ts  expressionUpdates.ts  fullscreenVisualisation.spec.ts  graphNavigator.spec.ts  graphNodeVisualization.spec.ts  graphRenderNodes.spec.ts  keyboard.ts  locate.ts  mockClipboard.ts  nodeClipboard.spec.ts  nodeComments.spec.ts  removingNodes.spec.ts  rightPanel.spec.ts  selectingNodes.spec.ts  setup.ts  spacingNodes.spec.ts  suggestionUpdates.ts  tableVisualisation.spec.ts  typesOnNodeHover.spec.ts  undoRedo.spec.ts  visualizationUpdates.ts  widgets.spec.ts
app/gui/project-manager-shim-middleware/: index.ts  projectManagement.ts
app/gui/scripts/ci/: parse-playwright-json-report.mjs  set-message.js
app/gui/src/: App.vue  ReactRoot.tsx  appUtils.ts  beforeMain.ts  config.ts  electronApi.ts  entrypoint.ts  log.ts  router.tsx
app/gui/src/authentication/: cognito.mock.ts  cognito.ts  listen.mock.ts  listen.ts  service.ts
app/gui/src/components/: AppContainer.vue  AppContainerLayout.vue  BackendProvider.vue  (+8 more)
app/lezer-markdown/: BUILD.bazel  CLAUDE.md  package.json  tsconfig.json
app/lezer-markdown/src/: extension.ts  markdown.ts
app/lezer-markdown/test/: tsconfig.json
app/table-expression/: BUILD.bazel  CLAUDE.md  package.json  tsconfig.json
app/table-expression/src/: autocomplete.ts  expression.grammar  highlight.ts  index.ts  language.ts
app/ydoc-channel/: BUILD.bazel  CLAUDE.md  package.json  tsconfig.build.json  tsconfig.test.json  vitest.config.ts
app/ydoc-channel/src/: YjsChannel.test.ts  YjsChannel.ts  index.ts
app/ydoc-shared/: BUILD.bazel  CLAUDE.md  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
app/ydoc-shared/parser-codegen/: tsconfig.json
app/ydoc-shared/src/: binaryProtocol.ts  languageServer.ts  languageServerTypes.ts  visualizations.ts  yjsModel.ts
build_tools/install/: BUILD.bazel  CLAUDE.md  build.rs
build_tools/install/config/: BUILD.bazel  CLAUDE.md  Cargo.toml
build_tools/install/installer/: BUILD.bazel  CLAUDE.md  build.rs
build_tools/install/src/: lib.rs  win.rs
build_tools/install/uninstaller/: BUILD.bazel  CLAUDE.md
internal/: BUILD.bazel  CLAUDE.md  checkTsconfigs.mjs  dependenciesVersions.cjs  envReplacer.mjs  generateVersionInfo.mjs  postinstall.mjs  prettierJson.mjs  runWithVersionInfo.mjs  stableStatus.mjs  stampFiles.bzl  workspaceStatus.mjs
(+4053 files in other folders)
