load("@aspect_rules_js//js:defs.bzl", "js_binary")

js_binary(
    name = "script_env_replacer",
    entry_point = "envReplacer.mjs",
    visibility = ["//visibility:public"],
)

js_binary(
    name = "script_prettier_json",
    data = ["//:node_modules/prettier"],
    entry_point = "prettierJson.mjs",
    visibility = ["//visibility:public"],
)
