load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")

js_binary(
    name = "script_env_replacer",
    entry_point = "envReplacer.mjs",
    visibility = ["//visibility:public"],
)

js_binary(
    name = "generate_version_info",
    entry_point = "generateVersionInfo.mjs",
    visibility = ["//visibility:public"],
)

js_run_binary(
    name = "generated_version_info",
    env = {
        "ENSO_SCALAC_VERSION": "2.13.15",
        "ENSO_GRAAL_VERSION": "25.0.1",
        "ENSO_GRAAL_MAVEN_PACKAGES_VERSION": "25.0.1",
        "ENSO_DEFAULT_DEV_VERSION": "0.0.0-dev",
    },
    stamp = -1,
    stdout = "GeneratedVersion.java",
    tool = ":generate_version_info",
    visibility = ["//visibility:public"],
)

js_binary(
    name = "run_with_version_info",
    entry_point = "runWithVersionInfo.mjs",
    visibility = ["//visibility:public"],
)

js_binary(
    name = "script_prettier_json",
    data = ["//:node_modules/prettier"],
    entry_point = "prettierJson.mjs",
    visibility = ["//visibility:public"],
)
