# Bazel build step defaults to having all envs left as placeholders, so that they can be replaced later after the vite build step.
ENSO_IDE_AG_GRID_LICENSE_KEY = "((%__ENSO_IDE_AG_GRID_LICENSE_KEY__%))"
ENSO_IDE_API_URL = "((%__ENSO_IDE_API_URL__%))"
ENSO_IDE_CLOUD_BUILD = "((%__ENSO_IDE_CLOUD_BUILD__%))"
ENSO_IDE_COMMIT_HASH = "((%__ENSO_IDE_COMMIT_HASH__%))"
ENSO_IDE_ENVIRONMENT = "((%__ENSO_IDE_ENVIRONMENT__%))"
ENSO_IDE_GOOGLE_ANALYTICS_TAG = "((%__ENSO_IDE_GOOGLE_ANALYTICS_TAG__%))"
ENSO_IDE_HOST = "((%__ENSO_IDE_HOST__%))"
ENSO_IDE_MAPBOX_API_TOKEN = "((%__ENSO_IDE_MAPBOX_API_TOKEN__%))"
ENSO_IDE_SENTRY_DSN = "((%__ENSO_IDE_SENTRY_DSN__%))"
ENSO_IDE_VERSION = "((%__ENSO_IDE_VERSION__%))"
