load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages", "npm_link_targets")
load("//:bazel_scripts/ts_config.bzl", "write_tsconfig")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "tsc",
    srcs = glob(["src/*.ts"]),
    composite = True,
    out_dir = "dist",
    root_dir = "src",
    tsconfig = ":tsconfig",
    validate = select({
        "@platforms//os:windows": False,
        "//conditions:default": True,
    }),
    deps = npm_link_targets(),
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tsc",
    ],
    visibility = ["//visibility:public"],
)

write_tsconfig(
    name = "tsconfig_generated",
    out = "tsconfig.json",
    config = {
        "compilerOptions": {
            "lib": ["es2017"],
            "noImplicitReturns": True,
            "noUnusedLocals": True,
            "strict": True,
            "target": "es6",
            "composite": True,
            "module": "es2015",
            "newLine": "lf",
            "stripInternal": True,
            "moduleResolution": "node",
            "outDir": "dist",
            "rootDir": "src",
        },
    },
    files = glob(["src/*.ts"]),
)

write_tsconfig(
    name = "tsconfig_test_generated",
    out = "test/tsconfig.json",
    config = {
        "compilerOptions": {
            "lib": ["es2017"],
            "noImplicitReturns": True,
            "noUnusedLocals": True,
            "strict": True,
            "target": "es6",
            "newLine": "lf",
            "moduleResolution": "node",
        },
    },
    files = glob(["test/*.ts"]),
)

write_source_files(
    name = "write_tsconfigs",
    files = {
        "tsconfig.json": ":tsconfig_generated",
        "test/tsconfig.json": ":tsconfig_test_generated",
    },
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)
