load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages", "npm_link_targets")
load("@npm//app/table-expression:@lezer/generator/package_json.bzl", lezer_generator_bin = "bin")
load("//:bazel_scripts/ts_config.bzl", "write_tsconfig")

npm_link_all_packages(name = "node_modules")

GENERATE_PARSER_OUTS = [
    "src/generated/parser.ts",
    "src/generated/parser.terms.ts",
]

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_project(
    name = "tsc",
    srcs = glob(
        ["src/**/*.ts"],
        GENERATE_PARSER_OUTS,
    ) + [":generate_parser"],
    composite = True,
    out_dir = "dist",
    root_dir = "src",
    tsconfig = ":tsconfig",
    validate = select({
        "@platforms//os:windows": False,
        "//conditions:default": True,
    }),
    deps = npm_link_targets(),
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tsc",
    ],
    visibility = ["//visibility:public"],
)

# lezer-generator

lezer_generator_bin.lezer_generator(
    name = "generate_parser",
    srcs = ["src/expression.grammar"],
    outs = GENERATE_PARSER_OUTS,
    args = [
        "src/expression.grammar",
        "--typeScript",
        "-o",
        "src/generated/parser",
    ],
    chdir = package_name(),
    env = {
        # Disable Node fs patching to avoid EPERM on Bazel symlinked outputs on Windows.
        "JS_BINARY__PATCH_NODE_FS": "0",
    },
    visibility = ["//visibility:public"],
)

# Convenience rule to output built artifacts to the filesystem, so JS tooling can see them.
# Important! Make sure the output of this rule is NOT used during the build process, which
# is currently ensured by GENERATE_PARSER_OUTS being used as an glob exclusion
# in `SRC` definition.
write_source_files(
    name = "write_parser_codegen",
    files = {
        "src/generated/parser.terms.ts": "src/generated/parser.terms.ts",
        "src/generated/parser.ts": "src/generated/parser.ts",
    },
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)

write_tsconfig(
    name = "tsconfig_generated",
    out = "tsconfig.json",
    config = {
        "compilerOptions": {
            "composite": True,
            "isolatedModules": True,
            "noEmit": False,
            "outDir": "dist",
            "rootDir": "src",
        },
    },
    extends = "//:tsconfig",
    files = glob(
        ["src/**/*.ts"],
        GENERATE_PARSER_OUTS,
    ) + GENERATE_PARSER_OUTS,
)

write_source_files(
    name = "write_tsconfigs",
    files = {"tsconfig.json": ":tsconfig_generated"},
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)
