load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages", "npm_link_targets")
load("//:bazel_scripts/ts_config.bzl", "write_tsconfig")

npm_link_all_packages(name = "node_modules")

GENERATED_TYPEDEF_FILE = "src/ast/generated/ast.ts"

TEST_SOURCES = [
    "src/**/__tests__/**",
    "src/**/*.bench.ts",
    "src/**/*.test.ts",
]

ts_config(
    name = "tsconfig",
    src = "tsconfig.build.json",
    deps = ["//:tsconfig"],
)

ts_project(
    name = "tsc",
    srcs = glob(
        ["src/**/*.ts"],
        [GENERATED_TYPEDEF_FILE] + TEST_SOURCES,
    ) + [":generate_ast_typedefs"],
    composite = True,
    out_dir = "dist",
    root_dir = "src",
    tsconfig = ":tsconfig",
    validate = select({
        "@platforms//os:windows": False,
        "//conditions:default": True,
    }),
    visibility = ["//visibility:public"],
    deps = npm_link_targets(),
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tsc",
    ],
    visibility = ["//visibility:public"],
)

# parser-codegen

ts_config(
    name = "tsconfig_parser_codegen",
    src = "parser-codegen/tsconfig.json",
)

ts_project(
    name = "parser_codegen_tsc",
    srcs = glob(["parser-codegen/*.ts"]),
    tsconfig = ":tsconfig_parser_codegen",
    validate = select({
        "@platforms//os:windows": False,
        "//conditions:default": True,
    }),
    deps = npm_link_targets(),
)

js_binary(
    name = "parser_codegen_bin",
    data = [
        "package.json",
        ":parser_codegen_tsc",
    ],
    entry_point = "parser-codegen/index.js",
)

js_run_binary(
    name = "generate_ast_typedefs",
    srcs = ["//lib/rust/parser/schema:generate"],
    args = ["$(rootpath //lib/rust/parser/schema:generate)"],
    stdout = GENERATED_TYPEDEF_FILE,
    tool = ":parser_codegen_bin",
    visibility = ["//visibility:public"],
)

# Convenience rule to output built artifacts to the filesystem, so JS tooling can see them.
# Important! Make sure the output of this rule is NOT used during the build process, which
# is currently ensured by GENERATED_TYPEDEF_FILE being used as an glob exclusion
# in `SRC` definition.
write_source_files(
    name = "write_ast_codegen",
    files = {
        "src/ast/generated/ast.ts": ":generate_ast_typedefs",
    },
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)

write_tsconfig(
    name = "tsconfig_build_generated",
    out = "tsconfig.build.json",
    config = {
        "compilerOptions": {
            "composite": True,
            "isolatedModules": True,
            "noEmit": False,
            "rootDir": "src",
            "outDir": "dist",
            "types": [
                "node",
                "vitest/importMeta",
            ],
        },
    },
    extends = "//:tsconfig",
    files = glob(
        ["src/**/*.ts"],
        [GENERATED_TYPEDEF_FILE] + TEST_SOURCES,
    ) + [GENERATED_TYPEDEF_FILE],
)

write_tsconfig(
    name = "tsconfig_test_generated",
    out = "tsconfig.test.json",
    config = {
        "compilerOptions": {
            "composite": True,
            "rootDir": "..",
            "types": [
                "node",
                "vitest/importMeta",
            ],
        },
    },
    extends = "//:tsconfig",
    files = glob(
        ["src/**/*.ts"],
        [GENERATED_TYPEDEF_FILE],
    ) + [
        "vitest.config.ts",
        "//app:vitest.node.base.ts",
        GENERATED_TYPEDEF_FILE,
    ],
)

write_tsconfig(
    name = "tsconfig_generated",
    out = "tsconfig.json",
    config = {
        "references": [
            {"path": "./tsconfig.build.json"},
            {"path": "./tsconfig.test.json"},
        ],
    },
    extends = "//:tsconfig",
    files = [],
)

write_tsconfig(
    name = "tsconfig_parser_codegen_generated",
    out = "parser-codegen/tsconfig.json",
    config = {
        "compilerOptions": {
            "types": ["node"],
            "lib": ["es2023"],
            "target": "es2022",
            "esModuleInterop": True,
            "skipLibCheck": True,
            "module": "ESNext",
            "moduleResolution": "Node",
            "strict": True,
            "verbatimModuleSyntax": True,
            "noUncheckedIndexedAccess": True,
            "exactOptionalPropertyTypes": True,
            "strictNullChecks": True,
        },
        "exclude": ["generated"],
    },
    files = glob(["parser-codegen/*.ts"]),
)

write_source_files(
    name = "write_tsconfigs",
    files = {
        "tsconfig.build.json": ":tsconfig_build_generated",
        "tsconfig.json": ":tsconfig_generated",
        "tsconfig.test.json": ":tsconfig_test_generated",
        "parser-codegen/tsconfig.json": ":tsconfig_parser_codegen_generated",
    },
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)
