load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "enso_install_config",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**/*.rs"],
    ),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//build_tools/base:enso_build_base",
        "//build_tools/ci_utils:ide_ci",
    ],
)

rust_binary(
    name = "prepare_payload",
    srcs = ["src/bin/prepare_payload.rs"],
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        ":enso_install_config",
        "//build_tools/ci_utils:ide_ci",
    ],
)
